Fix text wrapping in plugin and script lists.
Replaced <p> tags with CSS divs. Note some descriptions required top
padding to line up with the icons at left. Suggest removing top white
space from icons in future to correct this alignment issue.

--- a/stylesheets/exchangeStyles.css
+++ b/stylesheets/exchangeStyles.css
@@ -4,3 +4,34 @@
   margin-right: 20px;
   margin-left: 30px;
 }
+
+.container {
+  margin: 0 auto;
+  width: 840px;
+}
+
+.scriptorplugin-row {
+  width: 100%;
+  min-height: 100px;
+  margin-bottom: 20px;
+}
+
+.scriptorplugin-left-column {
+  display: inline-block;
+  float: left;
+}
+
+.scriptorplugin-right-column {
+  width: 680px;
+  display: inline-block;
+  padding: 0 0 16px 0
+}
+
+.image-class {
+  width: 100px;
+  height: 100px;
+}
+
+.align-left {
+  align: left;
+}
